--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
-AUTHORS
+# This file lists all contributors to the repository.
+Gwacham Jerry <zulejojo@gmail.com>
+Hillary Chukwu <larrychuckz@gmail.com>
